fix linear regression with keras

--- a/Gradient Descent.ipynb
+++ b/Gradient Descent.ipynb
@@ -48,7 +48,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -109,6 +109,23 @@
      "output_type": "stream",
      "text": [
       "Using TensorFlow backend.\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Epoch 1/5\n",
+      "30/30 [==============================] - 0s - loss: 14500.4883 - acc: 0.0000e+00     \n",
+      "Epoch 2/5\n",
+      "30/30 [==============================] - 0s - loss: 565.2227 - acc: 0.0000e+00      \n",
+      "Epoch 3/5\n",
+      "30/30 [==============================] - 0s - loss: 532.5419 - acc: 0.0000e+00     \n",
+      "Epoch 4/5\n",
+      "30/30 [==============================] - 0s - loss: 547.8927 - acc: 0.0000e+00     \n",
+      "Epoch 5/5\n",
+      "30/30 [==============================] - 0s - loss: 547.6949 - acc: 0.0000e+00     \n",
+      "w:[[ 3.88055038]], b:[ 0.05407631]\n"
      ]
     }
    ],
@@ -132,9 +149,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAGLZJREFUeJzt3W+MXNV9xvHvw+LCJmlrKFtrvbZrojqObBB2GVm0jioC\npXYIiglIjiMlslQrzgs3QBU5scmLpI0QrggOeRFQHaBxk4Bt8cdYJI0LtiMURHB2Ywvwv+LGEDws\n9qbBDaksx15+fTF3y+x6ZufOzszOzJ3nI1l758y9u+cK/Ozxmd89RxGBmZll1wXN7oCZmTWWg97M\nLOMc9GZmGeegNzPLOAe9mVnGOejNzDLOQW9mlnEOejOzjHPQm5ll3IXN7gDAZZddFrNnz252N8zM\n2srAwMCvI6Kn0nmpg15SF9AP5CPiJkmXAluB2cBrwPKIeDs5dz2wChgGbouIneN979mzZ9Pf35+2\nK2ZmBkh6Pc151Uzd3A4cKnq9DtgVEXOAXclrJM0DVgDzgaXA/ckvCTMza4JUQS9pBvBx4MGi5mXA\n5uR4M3BzUfuWiDgTEceAo8Ci+nTXzMyqlXZEfx/wJeDdorZpETGYHL8FTEuO+4A3is47nrSNImm1\npH5J/UNDQ9X12szMUqsY9JJuAk5GxEC5c6Kw1nFV6x1HxKaIyEVErqen4mcJZmY2QWk+jF0MfELS\njcDFwB9J+j5wQlJvRAxK6gVOJufngZlF189I2szMrAkqjugjYn1EzIiI2RQ+ZN0dEZ8BdgArk9NW\nAk8lxzuAFZIuknQ5MAfYW/eem5m1se378izesJvL1/2QxRt2s31f48bDtdTRbwC2SVoFvA4sB4iI\nA5K2AQeBc8CaiBiuuadmZhmxfV+e9U+8zOmzhWjMnzrN+ideBuDmhed9pFkztcJWgrlcLlxHb2ad\nYvGG3eRPnT6vvW9qN8+vuy7195E0EBG5Sud5CQQzs0n2ZomQH6+9Vg56M7NJNn1qd1XttXLQm5lN\nsrVL5tI9ZfSCAd1Tuli7ZG5Dfl5LLGpmZpYl2/fluWfnEd48dZrpU7tZu2TuqA9ZR47HO6eeHPRm\nZnWUtqLm5oV9DQv2sRz0ZmZ1MDKKL1VNc/rsMPfsPDJpwT6Wg97MrEZjR/GlNKqiJg0HvZnZBI03\nih+rURU1aTjozcwmIM0ofkQjK2rScNCbmaVUXE1zgcRwipUF+hpcUZOGg97MLIWxI/hKId89pYu7\nb7myqQE/wkFvZjaOaubhR7TCKL6Yg97MrIxq5uGhtUbxxRz0ZmZjVDOK75J4N6LhT7fWwkFvZlak\n2mqaVhzBj+WgNzOj+rn4VpuHH0/FoJd0MfAccFFy/mMR8VVJXwM+Bwwlp94ZET9KrlkPrAKGgdsi\nYmcD+m5mVhdZHMUXSzOiPwNcFxG/kzQF+Kmkf0/e+2ZEfKP4ZEnzKOwtOx+YDjwr6UPeTtDMWk2W\nR/HFKgZ9FPYa/F3yckryZ7wC0mXAlog4AxyTdBRYBLxQY1/NzOom66P4Yqk2HpHUJWk/cBJ4JiJe\nTN76gqSXJD0s6ZKkrQ94o+jy40mbmVnTbd+XZ/GG3dyxdX+qkO+b2t3WIQ8pP4xNpl0WSJoKPCnp\nCuAB4OsURvdfB+4F/i7tD5a0GlgNMGvWrCq7bWZWvU4axReraivBiDgF7AGWRsSJiBiOiHeB71CY\nngHIAzOLLpuRtI39XpsiIhcRuZ6enon13sysCvfsPNIxo/hiaapueoCzEXFKUjdwA/DPknojYjA5\n7ZPAK8nxDuARSRspfBg7B9hb/66bmVWn0prwWRrFF0szddMLbJbUReFfANsi4mlJ35O0gMLUzWvA\n5wEi4oCkbcBB4BywxhU3ZjbZSu3bOn1qd9kKm3atqElDkWKZzUbL5XLR39/f7G6YWUaUmovvntLF\nrVf38fhA/rz2dh3FSxqIiFyl8/xkrJllRqV9W/ccHuLuW648b6TfjiFfDQe9mWVC2n1bb17Yl/lg\nH6uqqhszs1aVpqKmmfu2NpOD3swyIU1FTTP3bW0mT92YWdtxRU11HPRm1lbGzsXnT51m/RMvZ66i\npp4c9GbWFlxRM3EOejNrea6oqY2D3sxaVjXrxXdqRU0aDnoza0nVrjTZqRU1aTjozawlVbPSpOfi\nx+egN7OW1KkrTTaCg97MmqpUTfzNC/tcF19HDnoza5pyNfEAa5fMLbkCpUfx1XPQm9mkq1QTf8/O\nIzy/7joA18XXgYPezCZV2pp4wHXxdZJmK8GLgeeAi5LzH4uIr0q6FNgKzKaww9TyiHg7uWY9sAoY\nBm6LiJ0N6b2ZtQ3XxDdPmtUrzwDXRcRVwAJgqaRrgHXAroiYA+xKXiNpHrACmA8sBe5PtiE0sw41\nMopPE/Kuia+/iiP6KOw1+Lvk5ZTkTwDLgGuT9s3AT4AvJ+1bIuIMcEzSUWAR8EI9O25mra+aUTy4\nmqZRUs3RJyPyAeDPgW9HxIuSpkXEYHLKW8C05LgP+FnR5ceTNjPrINU+2epqmsZJFfQRMQwskDQV\neFLSFWPeD0lV7TIuaTWwGmDWrFnVXGpmLcyj+NZTVdVNRJyStIfC3PsJSb0RMSipFziZnJYHZhZd\nNiNpG/u9NgGbAHK5XFW/JMysNXkU35oqfhgrqScZySOpG7gBOAzsAFYmp60EnkqOdwArJF0k6XJg\nDrC33h03s9axfV+exRt2c8fW/anXp3HIT540I/peYHMyT38BsC0inpb0ArBN0irgdWA5QEQckLQN\nOAicA9YkUz9mlkEexbc+FYpqmiuXy0V/f3+zu2FmVfBcfPNJGoiIXKXz/GSsmVXNo/j24qA3s9Q8\nim9PDnozS8Wj+PbloDezVLzjU/ty0JtZKt7xqX056M3sPKV2ffKOT+3LQW9mo5Tb9enWq/t4fCDv\nHZ/akIPezIDKuz7tOTzE3bdc6R2f2pCD3sxS7/rkHZ/ak4PerIN516fO4KA361DV1sV716f25aA3\n61Cui+8cDnqzDuW6+M6RZnNwM8ug8ebcvV58tjjozTrU2iVz6Z7SNaqte0oX931qAc+vu84hnyGe\nujHrUCNB7rr47HPQm3Uw18V3hjR7xs6UtEfSQUkHJN2etH9NUl7S/uTPjUXXrJd0VNIRSUsaeQNm\nZja+NCP6c8AXI+IXkv4QGJD0TPLeNyPiG8UnS5oHrADmA9OBZyV9yPvGmpk1R8Wgj4hBYDA5fkfS\nIWC8f+stA7ZExBngmKSjwCLghTr018yKlFpl0lMxNlZVVTeSZgMLgReTpi9IeknSw5IuSdr6gDeK\nLjvO+L8YzGwCRp5szZ86TfDeKpPb9+Wb3TVrMamDXtIHgMeBOyLit8ADwAeBBRRG/PdW84MlrZbU\nL6l/aGiomkvNOtr2fXkWb9jNHVv3n/dk6+mzw9yz80iTematKlXQS5pCIeR/EBFPAETEiYgYjoh3\nge9QmJ4ByAMziy6fkbSNEhGbIiIXEbmenp5a7sGsYxSP4sup9MSrdZ6Kc/SSBDwEHIqIjUXtvcn8\nPcAngVeS4x3AI5I2Uvgwdg6wt669NuswXmXSapGm6mYx8FngZUn7k7Y7gU9LWgAE8BrweYCIOCBp\nG3CQQsXOGlfcmE2cV5m0WqWpuvkpoBJv/Wica+4C7qqhX2Ydr5pRPHiVSSvPT8aataBqR/FegMzG\n46A3a0FeK97qyUFv1oK8VrzVk4PerMlKPd06fWp32bl5j+KtWg56syYaOxc/8nTrrVf38fhAftT0\njUfxNlEOerMmGK+i5vTZYfYcHuLuW670OjZWFw56s0mWpqLmzVOnvVa81Y2D3myS+OlWaxYHvdkk\n8NOt1kwOerMG8tOt1goc9GYN4qdbrVU46M3qzKN4azUOerM68ijeWpGD3qxGxU+2XiAxHFHxGo/i\nbTI56M1qMHYEXynkPYq3ZnDQm01AtfPw4FG8NU+arQRnAv8GTKOwm9SmiPiWpEuBrcBsCjtMLY+I\nt5Nr1gOrgGHgtojY2ZDemzVBNfPw4FG8NV+azcHPAV+MiHnANcAaSfOAdcCuiJgD7Epek7y3ApgP\nLAXul9TViM6bNUOateK7JERhFO+Qt2ZLs5XgIDCYHL8j6RDQBywDrk1O2wz8BPhy0r4lIs4AxyQd\nBRYBL9S782bN4LXird1UNUcvaTawEHgRmJb8EgB4i8LUDhR+Cfys6LLjSZtZ2/Fa8ZYFqYNe0geA\nx4E7IuK30nv7hUdESKpcUzb6+60GVgPMmjWrmkvNJoXXiresSDNHj6QpFEL+BxHxRNJ8QlJv8n4v\ncDJpzwMziy6fkbSNEhGbIiIXEbmenp6J9t+s7rbvy7N4w27u2Lr/vLn44rXi+6Z2ex7e2kKaqhsB\nDwGHImJj0Vs7gJXAhuTrU0Xtj0jaCEwH5gB769lps0bxWvGWRWmmbhYDnwVelrQ/abuTQsBvk7QK\neB1YDhARByRtAw5SqNhZExHp6tDMmsRrxVuWpam6+SmgMm9fX+aau4C7auiX2aTxWvGWdX4y1jpe\nmrp4cEWNtS8HvXU818Vb1jnoraO4Lt46kYPeOobr4q1TOegt88arqCmuix870nfIW1Y46C3TXBdv\n5qC3jHJdvNl7HPSWOa6LNxvNQW+Z47p4s9Ec9JY5ros3G81Bb23NdfFmlTnorW25Lt4snVTr0Zu1\nolJz8V4v3ux8HtFb2yo3F++6eLPRHPTWFqqZi3ddvNlonrqxljcyF58/dZrgvbn4j364h+4pXaPO\ndV282fk8oreWVDyCv0BiOEbvPe81aszSS7Nn7MPATcDJiLgiafsa8DlgKDntzoj4UfLeemAVMAzc\nFhE7G9Bvy7Cx1TRjQ36E5+LN0kkzdfNdYGmJ9m9GxILkz0jIzwNWAPOTa+6X1FXiWrOy0j7Z6rl4\ns3QqBn1EPAf8JuX3WwZsiYgzEXEMOAosqqF/1oEqPdkKnos3q0YtH8Z+QdJLkh6WdEnS1ge8UXTO\n8aTNLLVyI/UuyXXxZhMw0aB/APggsAAYBO6t9htIWi2pX1L/0NBQ5QusY6xdMrdkNc29y6/i2IaP\n8/y66xzyZlWYUNVNRJwYOZb0HeDp5GUemFl06oykrdT32ARsAsjlcqU/bbNMKlUTXxzcI8eupjGr\njwkFvaTeiBhMXn4SeCU53gE8ImkjMB2YA+ytuZeWGeXWpwHOC3sHu1l9pCmvfBS4FrhM0nHgq8C1\nkhYAAbwGfB4gIg5I2gYcBM4BayKicvmEdYxy69Pcs/OIg92sQSoGfUR8ukTzQ+OcfxdwVy2dsuwa\nb30aM2sML4Fgk6pcRY1r4s0ax0Fvk6pcRY1r4s0ax2vd2KRyRY3Z5HPQ26RzRY3Z5HLQW80q1cWb\nWXM56K0maevizax5HPQ2ISOj+FI7PLku3qy1OOitamNH8aW4Lt6sdTjoLbXxRvFjuS7erHU46C2V\nNKP4Ea6LN2stDnobVzWjeCisFe+qG7PW4qC3sqodxXszELPW5KC383gUb5YtDnobxaN4s+xx0Bvg\nUbxZljnozaN4s4yruEyxpIclnZT0SlHbpZKekfRq8vWSovfWSzoq6YikJY3quNVPqV2fSumb2u2Q\nN2tDadaj/y6wdEzbOmBXRMwBdiWvkTQPWAHMT665X1IX1tIqPcXaPaWL+z61gOfXXeeQN2tDFYM+\nIp4DfjOmeRmwOTneDNxc1L4lIs5ExDHgKLCoTn21Gm3fl2fxht1cvu6HLN6wm+378sD4T7F6FG/W\n/iY6Rz8tIgaT47eAaclxH/CzovOOJ23WZOOtMrl2ydzz5ug9F2+WHTVvJRgRAUS110laLalfUv/Q\n0FCt3bAKSs3DF68yefctV9I3tRvhUbxZ1kx0RH9CUm9EDErqBU4m7XlgZtF5M5K280TEJmATQC6X\nq/oXhVWn3Dz8SLt3fTLLrokG/Q5gJbAh+fpUUfsjkjYC04E5wN5aO2nVKbXj0/Sp3SVr5L3KpFn2\npSmvfBR4AZgr6bikVRQC/gZJrwJ/k7wmIg4A24CDwI+BNRFRuW7P6mZkLj5/6jTBe3PxH/1wD91T\nRhdAeZVJs86gwhR7c+Vyuejv7292N9papSdbR55k9d6uZtkhaSAicpXO85OxGZB2xyfPw5t1Jgd9\nG/OOT2aWhoO+TXnHJzNLy0HfZrzKpJlVy0HfRrzKpJlNhIO+DXgUb2a1cNC3OI/izaxWDvoW5VG8\nmdWLg74FeRRvZvXkoG9B1ez45FG8mVXioG9BaXZ88ijezNKqeT16qz/v+GRm9eSgb0Frl8wtudKk\n9201s4nw1E0TlFovvji8R4690qSZ1YODfpKNt3fr2LB3sJtZPXjqZpKNt3ermVkjOOgnWaW9W83M\n6q2mqRtJrwHvAMPAuYjISboU2ArMBl4DlkfE27V1sz1571YzawX1GNF/NCIWFG1ntQ7YFRFzgF3J\n647jvVvNrFU04sPYZcC1yfFm4CfAlxvwc1pO8Qj+AonhMfvxnj47zJ7DQ9x9y5WuqDGzSVNr0Afw\nrKRh4F8iYhMwLSIGk/ffAqaVulDSamA1wKxZs2rsRvONraYZG/IjvHermU22WoP+IxGRl/SnwDOS\nDhe/GREhqWTiJb8UNgHkcrnSqdhG0q5P47l4M5tsNc3RR0Q++XoSeBJYBJyQ1AuQfD1ZayfbQZqq\nGc/Fm1kzTHhEL+n9wAUR8U5y/LfAPwE7gJXAhuTrU/XoaCupppqmS+LdCM/Fm1nT1DJ1Mw14UtLI\n93kkIn4s6efANkmrgNeB5bV3s3WUe7L11qv7eHwgP2r6xqtMmlkrmHDQR8QvgatKtP83cH0tnWpF\n4+345GoaM2tlXusmhTQ7PrmaxsxalYN+HNXs2+pqGjNrVQ76Mqrdt9XVNGbWqhz0ZXjfVjPLCgd9\nGd631cyywssUl+F9W80sKxz0ZXjfVjPLio6duvG+rWbWKToy6L1vq5l1ko4K+kpPt96z84iD3cwy\np2OCPu3TrWZmWdMxH8amqYv3061mlkUdE/Rp6uL9dKuZZVHHBL3r4s2sU3VM0Lsu3sw6VWY+jHVd\nvJlZaQ0LeklLgW8BXcCDEbGhUT/LdfFmZuU1JOgldQHfBm4AjgM/l7QjIg7W8+e4Lt7MrLJGzdEv\nAo5GxC8j4vfAFmBZPX/AyCh+vE1BXBdvZta4oO8D3ih6fTxpqxvXxZuZpdO0qhtJqyX1S+ofGhqq\n+nrXxZuZpdOooM8DM4tez0ja/l9EbIqIXETkenp6qv4Bros3M0unUUH/c2COpMsl/QGwAthRzx/g\nungzs3QaUnUTEeck/T2wk0J55cMRcaCeP8N18WZm6Sgimt0Hcrlc9Pf3N7sbZmZtRdJAROQqndcx\nSyCYmXUqB72ZWcY56M3MMs5Bb2aWcQ56M7OMa4mqG0lDwOs1fIvLgF/XqTvtoNPuF3zPncL3XJ0/\ni4iKT5y2RNDXSlJ/mhKjrOi0+wXfc6fwPTeGp27MzDLOQW9mlnFZCfpNze7AJOu0+wXfc6fwPTdA\nJubozcysvKyM6M3MrIy2DnpJSyUdkXRU0rpm96cRJM2UtEfSQUkHJN2etF8q6RlJryZfL2l2X+tJ\nUpekfZKeTl5n+n4BJE2V9Jikw5IOSfrLLN+3pH9I/p9+RdKjki7O2v1KeljSSUmvFLWVvUdJ65M8\nOyJpSb360bZBX7QB+ceAecCnJc1rbq8a4hzwxYiYB1wDrEnucx2wKyLmALuS11lyO3Co6HXW7xfg\nW8CPI+LDwFUU7j+T9y2pD7gNyEXEFRSWM19B9u73u8DSMW0l7zH5e70CmJ9cc3+SczVr26BnEjYg\nbwURMRgRv0iO36Hwl7+Pwr1uTk7bDNzcnB7Wn6QZwMeBB4uaM3u/AJL+GPhr4CGAiPh9RJwi2/d9\nIdAt6ULgfcCbZOx+I+I54Ddjmsvd4zJgS0SciYhjwFEKOVezdg76hm9A3mokzQYWAi8C0yJiMHnr\nLWBak7rVCPcBXwLeLWrL8v0CXA4MAf+aTFk9KOn9ZPS+IyIPfAP4FTAI/E9E/AcZvd8xyt1jwzKt\nnYO+o0j6APA4cEdE/Lb4vSiUTmWifErSTcDJiBgod06W7rfIhcBfAA9ExELgfxkzbZGl+07mpZdR\n+AU3HXi/pM8Un5Ol+y1nsu6xnYO+4gbkWSFpCoWQ/0FEPJE0n5DUm7zfC5xsVv/qbDHwCUmvUZiO\nu07S98nu/Y44DhyPiBeT149RCP6s3vffAMciYigizgJPAH9Fdu+3WLl7bFimtXPQN3wD8lYgSRTm\nbQ9FxMait3YAK5PjlcBTk923RoiI9RExIyJmU/hvujsiPkNG73dERLwFvCFpbtJ0PXCQ7N73r4Br\nJL0v+X/8egqfP2X1fouVu8cdwApJF0m6HJgD7K3LT4yItv0D3Aj8J/BfwFea3Z8G3eNHKPzT7iVg\nf/LnRuBPKHxi/yrwLHBps/vagHu/Fng6Oe6E+10A9Cf/rbcDl2T5voF/BA4DrwDfAy7K2v0Cj1L4\nDOIshX+1rRrvHoGvJHl2BPhYvfrhJ2PNzDKunaduzMwsBQe9mVnGOejNzDLOQW9mlnEOejOzjHPQ\nm5llnIPezCzjHPRmZhn3f1psBTDFuXLvAAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x298c7cc42b0>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "x_test = total_x[batch_size:]\n",
     "\n",
